# tracky

./: .env.example  .gitignore  Cargo.toml  README.md  Trunk.toml  angular.json  compose.yml  deps.md  index.html  makefile  package-lock.json  package.json  readme.md  style.css  tailwind.config.js
backend/: Cargo.toml  app.js  package-lock.json  package.json
backend/src/: main.rs
src/: auth.rs  categories.rs  index.html  main.rs  routes.rs  services.rs  style.css  styles.scss
src/app/: app.component.ts  app.routes.ts
src/app/Components/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
src/app/Components/dashboard/expense/: expense.component.ts
src/app/Components/landing/: landing.component.html  landing.component.scss  landing.component.ts
src/app/Components/landing/categories/: categories.component.html  categories.component.scss  categories.component.ts
src/app/Components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
src/app/Services/: category.service.ts  dates.service.ts  expenses.service.ts  salary.service.ts
src/static/: style.css
