[package]
name = "tracky"
version = "0.1.0"
edition = "2021"

[dependencies]
anymap = "0.12.1"
chrono = { version = "0.4.38", features = ["serde"] }
gloo = "0.11.0"
reqwasm = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
validator = { version = "0.19.0", features = ["derive"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["HtmlInputElement", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
