[package]
name = "tracky"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
axum-extra = { version = "0.9.1", features = ["typed-header"] }
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.17"
chrono = { version = "0.4.34", features = ["serde"] }
bcrypt = "0.15.1"
dotenv = "0.15.0"
postgrest = "1.6.0"
supabase_rs = "0.4.0"
